mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
         - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongodb-service
spec:
  ports:
  - port: 27017 # service Port which is exposed to outside
    protocol: TCP
    targetPort: 27017 # Container Port of deployement which will be bind with Service Port and they can be different
  selector:
    app: mongodb
